[package]
name = "vbsp-entities-css"
version = "0.1.0-egg"
edition = "2024"
authors = ["Rhys Lloyd <krakow20@gmail.com>"]
repository = "https://github.com/krakow10/vbsp-entities"
description = "VBSP entity definitions for Counter Strike: Source."
license = "MIT OR Apache-2.0"
readme = "README.md"

[dependencies]
serde = "1.0.218"
vbsp = "0.6.0"
