[package]
name = "vbsp-entities-tf2"
version = "0.3.0"
edition = "2024"
authors = ["Rhys Lloyd <krakow20@gmail.com>"]
repository = "https://github.com/krakow10/vbsp-entities"
description = "VBSP entity definitions for Team Fortress 2."
license = "MIT OR Apache-2.0"
readme = "README.md"

[dependencies]
serde = "1.0.218"
vbsp-common = "0.1.0"
